--- a/Web Pratice/styles.css
+++ b/Web Pratice/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #34495e;
+}
+
 .form,
 .greetings {
   display: none;
@@ -5,4 +9,23 @@
 
 .showing {
   display: block;
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 1s linear;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
