--- a/Web Pratice/styles.css
+++ b/Web Pratice/styles.css
@@ -1,5 +1,137 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap");
+html,
 body {
-  background-color: #34495e;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: black;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+}
+
+h1,
+h2 {
+  padding: 0;
+  margin: 0;
+  color: white;
+}
+
+h1 {
+  font-size: 70px;
+  font-weight: 400;
+}
+
+header {
+  width: 100%;
+  height: 30px;
+  background-color: rgb(39, 39, 39);
+  display: flex;
+  align-items: center;
+}
+
+.js-weather {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+  margin: 10px 20px;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.main-blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: .5;
+  );
+}
+
+.main-ui__holder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.js-clock {
+  width: 330px;
+  height: 100px;
+  border: 5px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.name-input {
+  height: 30px;
+  width: 110px;
+  margin-top: 5px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  border-bottom: 5px solid white;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+}
+
+.name-input:focus {
+  outline: none;
+}
+
+.name-input::placeholder {
+  color: white;
+  font-size: 11px;
+}
+
+.todo-input {
+  width: 200px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  border-bottom: 5px solid white;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+}
+
+.todo-input:focus {
+  outline: none;
+}
+
+.todo-input::placeholder {
+  color: white;
+  font-size: 15px;
+}
+
+.greetings {
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 .form,
